--- a/urldecoder.scss
+++ b/urldecoder.scss
@@ -6,7 +6,6 @@
     width: 100%;
     padding-bottom: .2em;
     margin-bottom: .6em;
-    border-bottom: dashed 2px;
 }
 
 * {
@@ -14,8 +13,10 @@
 }
 
 body {
+    background-color: #FFFFFF;
     font-family: 'Istok Web', sans-serif;
     font-size: 16px;
+    color: #260339;
     line-height: 1.3em;
     padding: 2rem;
 }
@@ -25,25 +26,43 @@ body {
     font-size: 1.2rem;
     width: 100%;
     height: 40vh;
-    max-height: 300px;
+    min-height: 200px;
     padding: .5rem;
+    border: solid 1px #CCC;
+    resize: none;
 }
 
 .submit-button {
-    font-size: 2rem;
+    position: relative;
+    background-color: #CCC;
+    color: #260339;
+    font-size: .8rem;
+    margin-top: .75rem;
+    padding: .3em .5em;
+    border: solid 1px #AAA;
+    border-radius: 10%;
+    cursor: pointer;
+    box-shadow: 1px 1px 3px 0 #999;
+    outline: 0;
+    transition: all .2s ease-in-out;
+}
+
+.submit-button:active {
+    top: 2px;
+    left: 2px;
+    box-shadow: 1px 1px 0 0 #BBB inset;
 }
 
 .output {
+    display: -webkit-flex;
     display: flex;
-    flex-flow: wrap;
-    justify-content: space-around;
-    margin-top: 2rem;
 }
 
 .decoded {
+    -webkit-flex: 3;
+    flex: 3;
     word-break: break-all;
-    width: 60%;
-    min-width: 600px;
+    margin-top: 2rem;
 
     &::before {
         @extend %heading;
@@ -53,7 +72,10 @@ body {
 }
 
 .decoded-params {
-    width: 35%;
+    -webkit-flex: 2;
+    flex: 2;
+    margin-top: 2rem;
+    margin-left: 2rem;
 
     &::before {
         @extend %heading;
@@ -61,16 +83,34 @@ body {
     }
 }
 
+.decoded-line {
+    display: -webkit-flex;
+    display: flex;
+    word-break: break-all;
+    padding-top: .375em;
+    padding-bottom: .375em;
+    border-bottom: solid 1px #EEE;
+}
+
 .decoded-key {
-    clear: left;
-    float: left;
-    width: 40%;
-    padding-bottom: .75em;
+    -webkit-flex: 2;
+    flex: 2;
+    padding-right: 1em;
 }
 
 .decoded-value {
-    overflow-x: auto;
-    float: left;
-    width: 60%;
-    padding-bottom: .75em;
+    -webkit-flex: 3;
+    flex: 3;
+}
+
+@media screen and (max-width: 50em) {
+
+    .output {
+        display: block;
+    }
+
+    .decoded-params {
+        margin-left: 0;
+    }
+
 }
