--- a/urldecoder.scss
+++ b/urldecoder.scss
@@ -105,6 +105,10 @@ body {
 
 @media screen and (max-width: 50em) {
 
+    body {
+        padding: 1rem;
+    }
+
     .output {
         display: block;
     }
