--- a/urldecoder.scss
+++ b/urldecoder.scss
@@ -1,5 +1,3 @@
-@import 'reset';
-
 %heading {
     display: block;
     font-size: 1.5rem;
@@ -18,7 +16,16 @@ body {
     font-size: 16px;
     color: #260339;
     line-height: 1.3em;
-    padding: 2rem;
+    padding-top: 1px;
+}
+
+.decode-form,
+.output {
+    margin: 2rem;
+}
+
+.decode-form {
+    margin-bottom: 0;
 }
 
 .encoded {
@@ -56,6 +63,7 @@ body {
 .output {
     display: -webkit-flex;
     display: flex;
+    margin-top: 0;
 }
 
 .decoded {
@@ -105,8 +113,9 @@ body {
 
 @media screen and (max-width: 50em) {
 
-    body {
-        padding: 1rem;
+    .decode-form,
+    .output {
+        margin: 1rem;
     }
 
     .output {
