use postcss, sourcemaps, header, input fixes

--- a/urldecoder.css
+++ b/urldecoder.css
@@ -1,11 +1,3 @@
-%heading {
-    display: block;
-    font-size: 1.5rem;
-    width: 100%;
-    padding-bottom: .2em;
-    margin-bottom: .6em;
-}
-
 * {
     box-sizing: border-box;
 }
@@ -19,12 +11,18 @@ body {
     padding-top: 1px;
 }
 
+h1,
 .decode-form,
 .output {
     margin: 2rem;
 }
 
+h1 {
+    margin-bottom: 0;
+}
+
 .decode-form {
+    margin-top: 1rem;
     margin-bottom: 0;
 }
 
@@ -61,38 +59,46 @@ body {
 }
 
 .output {
-    display: -webkit-flex;
     display: flex;
     margin-top: 0;
+    opacity: 0;
+    transition: opacity .2s ease-out;
+}
+
+.output.with-results {
+    opacity: 1;
+}
+
+.decoded::before,
+.decoded-params::before {
+    display: block;
+    font-size: 1.5rem;
+    width: 100%;
+    padding-bottom: .2em;
+    margin-bottom: .6em;
 }
 
 .decoded {
-    -webkit-flex: 3;
     flex: 3;
     word-break: break-all;
     margin-top: 2rem;
 
     &::before {
-        @extend %heading;
         content: "Decoded";
     }
-
 }
 
 .decoded-params {
-    -webkit-flex: 2;
     flex: 2;
     margin-top: 2rem;
     margin-left: 2rem;
 
     &::before {
-        @extend %heading;
         content: "Decoded params";
     }
 }
 
 .decoded-line {
-    display: -webkit-flex;
     display: flex;
     word-break: break-all;
     padding-top: .375em;
@@ -101,21 +107,24 @@ body {
 }
 
 .decoded-key {
-    -webkit-flex: 2;
     flex: 2;
     padding-right: 1em;
 }
 
 .decoded-value {
-    -webkit-flex: 3;
     flex: 3;
 }
 
 @media screen and (max-width: 50em) {
 
+    h1,
     .decode-form,
     .output {
         margin: 1rem;
+    }
+
+    h1 {
+        padding: 0;
     }
 
     .output {
